--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@chakra-ui/styled-system": ">=2.0.0",
+    "@chakra-ui/theme": "^2.2.5",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "framer-motion": "^10.3.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
